--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/templates/images/favor_icon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>MovieTime 电影购票系统</title>
+    <title>PopcornMovie 电影购票系统</title>
     
     <!-- 引入原有的CSS文件 -->
     <link href="/templates/css/bootstrap.css" rel='stylesheet' type='text/css' />
