完善支付界面

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/templates/images/favor_icon.png" type="image/x-icon" />
-    <link rel="shortcut icon" href="/templates/images/favor_icon.png" type="image/x-icon" />
+    <!-- <link rel="icon" href="/templates/images/favor_icon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/templates/images/favor_icon.png" type="image/x-icon" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>PopcornMovie 电影购票系统</title>
